[EDIT] 修改背景色bgColor3

--- a/static/src/scss/theme.scss
+++ b/static/src/scss/theme.scss
@@ -9,7 +9,7 @@ $darkColor2: rgba(102,102,102, 0.75) !default;
 
 $bgColor1: #ffffff !default;
 $bgColor2: #f3f9d2 !default;
-$bgColor3: #dddddd !default;
+$bgColor3: #eeeeee !default;
 
 $bColor: #aaaaaa !default;
 $bColor2: #5bc0de !default;
