--- a/static/src/scss/theme.scss
+++ b/static/src/scss/theme.scss
@@ -10,6 +10,7 @@ $darkColor2: rgba(102,102,102, 0.75) !default;
 $bgColor1: #ffffff !default;
 $bgColor2: #f3f9d2 !default;
 $bgColor3: #eeeeee !default;
+$bgColor4: #cdcdcd !default;
 
 $bColor: #aaaaaa !default;
 $bColor2: #5bc0de !default;
