--- a/static/src/component/timeTable/timeTable.scss
+++ b/static/src/component/timeTable/timeTable.scss
@@ -9,125 +9,146 @@
         border: 1px solid $bColor2;
         border-radius: 5px;
     }
-}
 
-.filterBox{
-    @extend %ui-font2;
-    width: 100%;
-    padding: 4px 0;
-}
+    .filterBox{
+        @extend %ui-font2;
+        width: 100%;
+        padding: 4px 0;
+    }
 
-.tt-container{
-    position: relative;
-}
-.tt-headCol{
-    position: absolute;;
-    left: 0;
-    top: 0;
-    display: inline-block;
-    // padding-bottom: 10px;
-    background-color: $bgColor1;
-    z-index: 1;
-}
-.tt-wrapper{
-    overflow-x: scroll;
-    padding-bottom: 10px;
-    background-color: $bgColor1;
-}
-.tt-main{
-    padding-left: 75px;
-}
-.tt-dateList{
-    border-bottom: 2px solid $darkColor1;
-    background-color: $bgColor2;
-    .tt-name, .tt-date{
-        line-height: 24px;
-        padding: 2px 0;
+    .tt-container{
+        position: relative;
     }
-}
-.tt-ppl{
-    border-bottom: 1px solid $darkColor2;
-    .tt-name{
-        line-height: 44px;
-        cursor: pointer;
+    .tt-headCol{
+        position: absolute;;
+        left: 0;
+        top: 0;
+        display: inline-block;
+        // padding-bottom: 10px;
+        background-color: $bgColor1;
+        z-index: 1;
     }
-}
-.tt-name{
-    @extend %ui-font2;
-    box-sizing: border-box;
-    float: left;
-    text-align: center;
-    width: 75px;
-    border-right: 1px solid $darkColor2;
-}
-.tt-date{
-    @extend %ui-font4;
-    float: left;
-    text-align: center;
-    min-height: 1px;
-    width: 45px;
-    &.weph{
-        background-color: $bgColor4;
+    .tt-wrapper{
+        overflow-x: scroll;
+        padding-bottom: 10px;
+        background-color: $bgColor1;
     }
-}
-.tt-task{
-    position: relative;
-    &.onLeave{
-        box-shadow: 0 0 2px 1px #ff0000 inset;
-        &:after{
-            position: absolute;
-            top: 0;
-            right: 0;
-            content: ' ';
-            border-top: 3px solid #ff0000;
-            border-right: 3px solid #ff0000;
-            border-bottom: 3px solid transparent;
-            border-left: 3px solid transparent;
+    .tt-main{
+        padding-left: 75px;
+    }
+    .tt-dateList{
+        border-bottom: 2px solid $darkColor1;
+        background-color: $bgColor2;
+        .tt-name, .tt-date{
+            line-height: 24px;
+            padding: 2px 0;
         }
-        &:hover{
-            .tt-leave{
-                display: block;
+    }
+    .tt-ppl{
+        border-bottom: 1px solid $darkColor2;
+        .tt-name{
+            line-height: 44px;
+            cursor: pointer;
+        }
+    }
+    .tt-name{
+        @extend %ui-font2;
+        box-sizing: border-box;
+        float: left;
+        text-align: center;
+        width: 75px;
+        border-right: 1px solid $darkColor2;
+    }
+    .tt-date{
+        @extend %ui-font4;
+        float: left;
+        text-align: center;
+        min-height: 1px;
+        width: 45px;
+        &.weph{
+            background-color: $bgColor4;
+        }
+    }
+    .tt-task{
+        position: relative;
+        &.onLeave{
+            box-shadow: 0 0 2px 1px #ff0000 inset;
+            &:after{
+                position: absolute;
+                top: 0;
+                right: 0;
+                content: ' ';
+                border-top: 3px solid #ff0000;
+                border-right: 3px solid #ff0000;
+                border-bottom: 3px solid transparent;
+                border-left: 3px solid transparent;
+            }
+            &:hover{
+                .tt-leave{
+                    display: block;
+                }
             }
         }
     }
-}
-.tt-leave{
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.tt-taskItem{
-    text-align: center;
-    cursor: pointer;
-    height: 22px;
-}
+    .tt-leave{
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .tt-taskItem{
+        text-align: center;
+        cursor: pointer;
+        height: 22px;
+    }
 
-.taskView{
-    padding: 10px;
-}
-.tv-list{
-    width: 100%;
-}
-.tv-item{
-    @extend %ui-font2;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    width: 200px;
-    border-radius: 3px;
-    margin: 2px;
-}
-
-input.stageInput{
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 0 5px 1px $bColor2;
-}
-
-@media screen and (max-width: 450px){
+    .taskView{
+        padding: 10px;
+    }
+    .tv-list{
+        width: 100%;
+    }
     .tv-item{
-        width: 140px;
+        @extend %ui-font2;
+        float: left;
+        text-align: center;
+        cursor: pointer;
+        width: 200px;
+        border-radius: 3px;
+        margin: 2px;
+    }
+
+    .btn-section{
+        position: relative;
+        text-align: center;
+        padding: 10px 0;
+    }
+    .back-btn, .confirm-btn{
+        display: inline-block;
+        line-height: 30px;
+        cursor: pointer;
+        width: 30%;
+        border: 1px solid $mainColor;
+        border-radius: 3px;
+        margin: 0 10px;
+    }
+    .back-btn{
+        @extend %ui-btn2;
+    }
+    .confirm-btn{
+        @extend %ui-btn;
+    }
+
+    input.stageInput{
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        box-shadow: inset 0 0 5px 1px $bColor2;
+    }
+
+    @media screen and (max-width: 450px){
+        .tv-item{
+            width: 140px;
+        }
     }
 }
