[EDIT] 更改请假日期的格式

--- a/static/src/component/editLeave/editLeave.jade
+++ b/static/src/component/editLeave/editLeave.jade
@@ -2,16 +2,18 @@ div#editLeave
     div.name {{ ppl.name }}
     div.input-area
         label 休假日期: 
-        input.dateInput(type="text", maxLength="8", placeholder="格式为20170101", pattern="^20[0-9]{6}$", @input="checkInput(false)", v-model="leave.date")
+        input.dateInput(type="text", maxLength="10", placeholder="格式为2017/01/01", @input="checkInput(false)", v-model="leave.date")
     div.input-area
         label 时间段: 
         select.selectInput(v-model="leave.time")
+            option(value="") 
             option(value="ALL") 全天
             option(value="AM") 上午
             option(value="PM") 下午
     div.input-area
         label 假期类型: 
         select.selectInput(v-model="leave.type")
+            option(value="") 
             option(value="A") 年假
             option(value="S") 病假
             option(value="UP") 事假
