--- a/static/src/component/timeTable/timeTable.scss
+++ b/static/src/component/timeTable/timeTable.scss
@@ -86,6 +86,8 @@
             &:hover{
                 .tt-leave{
                     display: block;
+                    color: $warnFontColor;
+                    background-color: $bgColor1;
                 }
             }
         }
